--- a/InstagramClone/Resource/GoogleService-Info.plist
+++ b/InstagramClone/Resource/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1061507525495-b7bnhd1a3fkm9jlhmqufkikmijuq6frm.apps.googleusercontent.com</string>
+	<string>500819405485-snriq43ljigqgtrdc7d6fjgebup9ej70.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1061507525495-b7bnhd1a3fkm9jlhmqufkikmijuq6frm</string>
+	<string>com.googleusercontent.apps.500819405485-snriq43ljigqgtrdc7d6fjgebup9ej70</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAO-jjmW1hLfCvwEMwGwcJ12YrNxCFYrao</string>
+	<string>AIzaSyDxLUdTxDNR4UicdYU1225uUHgH6-5EpfA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1061507525495</string>
+	<string>500819405485</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.jihun.InstagramClone</string>
 	<key>PROJECT_ID</key>
-	<string>hun-chatapp</string>
+	<string>instagramclone-5520d</string>
 	<key>STORAGE_BUCKET</key>
-	<string>hun-chatapp.appspot.com</string>
+	<string>instagramclone-5520d.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1061507525495:ios:dc6d0dc0431587e80a4f72</string>
-	<key>DATABASE_URL</key>
-	<string>https://hun-chatapp-default-rtdb.firebaseio.com</string>
+	<string>1:500819405485:ios:fd52f262cf45ddd98b3424</string>
 </dict>
 </plist>
